# mathgl

./: CMakeLists.txt  COPYRIGHT  ChangeLog.txt  Doxyfile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  bootstrap  configure  configure.ac  mathgl.cbp  mathgl.spec  mgl-glut.cbp  mgl2eps.cbp  mgl2gif.cbp  mgl2png.cbp  mgl_example.cbp  png  png_static  setup.py
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: autotroll.m4
debian/: changelog  control  libmgl-addon.install  libmgl-fltk.install  libmgl-qt4-dev.install  rules
debinstall/: changelog  control  copyright  libmgl-fltk-dev.install  libmgl-glut.install  libmgl-qt5.install  libmgl-wx2.6-dev.docs  libmgl-wx2.6-dev.install  libmgl-wx2.6.install  libmgl.install  rules
examples/: CMakeLists.txt  Makefile.am  Makefile.in  fltk_example.cpp  full_test.cpp  full_test_idtf.cpp  glut_example.cpp  main.cpp  qt_example.cpp  wnd_samples.cpp  wx_example.cpp
font_tools/: Makefile  make_font.cpp
fonts/: Makefile  STIX.vfm  STIX_b.vfm  STIX_bi.vfm  STIX_font.tgz  STIX_i.vfm  adventor_font.tgz  bonum_font.tgz  chorus_font.tgz  cursor_font.tgz  heros_font.tgz  heroscn_font.tgz  pagella_font.tgz  (+2 more)
include/: CMakeLists.txt  Makefile.am  Makefile.in  mgl_pas.pas
include/bigforth/: mathgl.fs  mglplot.fs
include/mgl/: config.h  config.h.in  mathgl.fs  mgl.h  mgl_ab.h  mgl_addon.h  mgl_c.h  mgl_data.h  mgl_data_w.h  mgl_define.h  mgl_eps.h  mgl_eval.h  mgl_evalc.h  mgl_f.h  mgl_fltk.h  mgl_font.h  mgl_gl.h  mgl_glut.h  mgl_graph.h  mgl_idtf.h  mgl_io.h  mgl_parse.h  mgl_qt.h  mgl_w.h  mgl_wx.h  mgl_zb.h  stamp-h1
lang/: CMakeLists.txt  DESCRIPTION  Makefile.am  Makefile.in  mgl.i  mgl_base.i  mgl_data.i  mgl_graph.i
mathgl-1x/mgl/: CMakeLists.txt  Makefile.am  Makefile.in  mgl_3d.cpp  mgl_ab.cpp  mgl_axis.cpp  mgl_c.cpp  mgl_combi.cpp  mgl_crust.cpp  mgl_data.cpp  mgl_data_cf.cpp  mgl_data_io.cpp  mgl_data_png.cpp  mgl_eps.cpp  mgl_evalc.cpp  mgl_exec.cpp  mgl_export.cpp  mgl_fit.cpp  mgl_font.cpp  mgl_gl.cpp  mgl_idtf.cpp  mgl_main.cpp  mgl_pde.cpp  mgl_vect.cpp  mgl_zb.cpp  mgl_zb2.cpp
mgl/: CMakeLists.txt  Makefile.am  Makefile.in  data_hdf.cpp  mgl_1d.cpp  mgl_2d.cpp  mgl_3d.cpp  mgl_ab.cpp  mgl_addon.cpp  mgl_axis.cpp  mgl_c.cpp  mgl_combi.cpp  mgl_cont.cpp  mgl_crust.cpp  mgl_data.cpp  mgl_data_cf.cpp  mgl_data_io.cpp  mgl_data_png.cpp  mgl_def_font.cpp  mgl_eps.cpp  mgl_eval.cpp  mgl_evalc.cpp  mgl_evalp.cpp  mgl_exec.cpp  mgl_export.cpp  mgl_f.cpp  mgl_fit.cpp  mgl_flow.cpp  mgl_fltk.cpp  mgl_font.cpp  mgl_gl.cpp  mgl_gl_new.cpp  mgl_glut.cpp  mgl_idtf.cpp  mgl_io.cpp  mgl_main.cpp  mgl_parse.cpp  mgl_pas.pas  mgl_pde.cpp  mgl_tex_table.cpp  (+9 more)
texinfo/: CMakeLists.txt  Makefile.am  Makefile.in  appendix_en.texi  appendix_ru.texi  cint.texi  class.texi  class_en.texi  class_ru.texi  concept_en.texi  concept_ru.texi  core.texi  core_en.texi  core_ru.texi  data.texi  data_en.texi  data_ru.texi  example.texi  example_en.texi  example_ru.texi  mathgl.texi  mathgl_en.texi  mathgl_ru.texi  mgl.texi  mgl_cmd_en.texi  mgl_cmd_ru.texi  mgl_en.texi  mgl_ru.texi  overview.texi  overview_en.texi  overview_ru.texi  python.texi  samples.texi  samples_en.texi  samples_ru.texi  slides_full.tex  widget_en.texi  widget_ru.texi
texinfo/png/: Makefile.am  Makefile.in
texinfo/png_static/: color_scheme.mgl
u3d/: CMakeLists.txt  ChangeLog  Makefile.in  README  configure  configure.ac
u3d/Docs/: HTML_U3D.tbz  Makefile.am  Makefile.in
u3d/IDTF/: ConverterDriver.cpp  FileScanner.cpp  Makefile.in
u3d/IDTF/Helpers/: DebugInfo.cpp
u3d/RTL/: Makefile.in
u3d/RTL/Component/BitStream/: IFXHistogramDynamic.cpp
u3d/RTL/Component/Bones/: IFXBonesManagerImpl.cpp  IFXCharacter.cpp  IFXMotionMixerImpl.cpp  IFXSkin.cpp
u3d/RTL/Component/CLODAuthor/: NormalMap.cpp
u3d/RTL/Component/Exporting/: CIFXAuthorCLODEncoderX_P.cpp
u3d/RTL/Component/Generators/CLOD/: CIFXAuthorMesh.cpp
u3d/RTL/Component/Generators/PointSet/: CIFXAuthorPointSetResource.cpp
u3d/RTL/Component/Importing/: CIFXInternetReadBufferX.cpp  CIFXLineSetDecoder.cpp  CIFXLoadManager.cpp
u3d/RTL/Component/Include/: IFXAttributes.h  IFXHistogramDynamic.h  IFXList.h  IFXListContext.h  Makefile.in
u3d/RTL/Component/ModifierChain/: CIFXModifierChain.cpp
u3d/RTL/Component/SceneGraph/: CIFXNode.cpp  CIFXView.cpp
u3d/RTL/Component/Scheduling/: CIFXTimeManager.cpp
u3d/RTL/Component/Subdiv/: IFXTQTTriangle.cpp
u3d/RTL/Component/Texture/: CIFXImageTools.cpp  CIFXTextureObject.cpp
u3d/RTL/Dependencies/jpeg/: jconfig.h.cmake
u3d/RTL/IFXCorePluginStatic/: IFXCorePluginStatic.cpp
u3d/RTL/Kernel/DataTypes/: IFXString.cpp
u3d/RTL/Kernel/Include/: IFXDataTypes.h  Makefile.in
u3d/RTL/Platform/Include/: Makefile.in
u3d/RTL/Platform/Lin32/: Makefile.in
u3d/RTL/Platform/Lin32/Common/: IFXOSRenderWindow.cpp  IFXOSUtilities.cpp
u3d/RTL/Platform/Lin32/IFXCore/: Makefile.in
u3d/RTL/Platform/Lin32/IFXCoreStatic/: Makefile.in
u3d/RTL/Platform/Lin32/IFXExporting/: Makefile.in
u3d/RTL/Platform/Lin32/IFXImporting/: Makefile.in
u3d/RTL/Platform/Lin32/IFXScheduling/: Makefile.in
u3d/RTL/Platform/Mac32/: Makefile.in
u3d/RTL/Platform/Mac32/Common/: IFXOSRenderWindow.cpp  IFXOSUtilities.cpp
u3d/RTL/Platform/Mac32/IFXCore/: Makefile.in
u3d/RTL/Platform/Mac32/IFXCoreStatic/: Makefile.in
u3d/RTL/Platform/Mac32/IFXExporting/: Makefile.in
u3d/RTL/Platform/Mac32/IFXImporting/: Makefile.in
u3d/RTL/Platform/Mac32/IFXScheduling/: Makefile.in
u3d/RTL/Platform/Win32/Common/: IFXOSLoader.cpp  IFXOSUtilities.cpp
u3d/Samples/: Makefile.in
u3d/Samples/SampleCode/: IDTFGen.cpp  Makefile.in  Makefile.sample
u3d/Samples/TestScenes/: Makefile.in
u3d/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
u3d/libIDTF/: IFXOSLoader.cpp  IFXOSUtilities.cpp  Makefile.am  Makefile.in
utils/: CMakeLists.txt  Makefile.am  Makefile.in  mgl2cpp.cpp  mgl2eps.cpp  mgl2gif.cpp  mgl2png.cpp  mgl2svg.cpp  mglview.cpp
widgets/: CMakeLists.txt  Makefile.am  Makefile.in  mgl_fltk.cpp  mgl_glut.cpp  mgl_qt.cpp  mgl_wx.cpp
(+204 files in other folders)
